# pexels

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Roadmap.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: Build.yml  audit.yml  build.yml  docs.yml  rust-clippy.yml
pexels-api/: Cargo.toml  README.md
pexels-api/src/: client.rs  download.rs  lib.rs  models.rs  search.rs
pexels-api/src/collections/: collections.rs  featured.rs  items.rs  media.rs  mod.rs
pexels-api/src/domain/: domain.rs  models.rs
pexels-api/src/photos/: curated.rs  photo.rs  search.rs
pexels-api/src/videos/: popular.rs  search.rs  video.rs
pexels-cli/: Cargo.toml  README.md
pexels-cli/src/: api.rs  cli.rs  main.rs
