[workspace]
members = [
    "pexels-api",
    "pexels-cli",
]

resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
version = "0.0.5"
authors = ["https://github.com/houseme"]
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
description = "A Rust client for the Pexels API. API Address: https://www.pexels.com/api/documentation/"
homepage = "https://github.com/houseme/pexels"
repository = "https://github.com/houseme/pexels.git"
documentation = "https://docs.rs/pexels"
readme = "./README.md"
keywords = ["pexels", "api", "client", "cli", "pexels-api"]
categories = ["web-programming", "development-tools", "asynchronous", "network-programming"]

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
pexels-api = { path = "./pexels-api", version = "0.0.5" }
reqwest = { version = "0.12.19", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
