[workspace]
members = [
    "pexels-api",
    "pexels-cli",
]

resolver = "2"

[profile.release]
opt-level = 3

[workspace.package]
version = "0.1.0"
authors = ["https://github.com/houseme"]
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
description = "A Rust client for the Pexels API. API Address: https://www.pexels.com/api/documentation/"
homepage = "https://github.com/houseme/pexels"
repository = "https://github.com/houseme/pexels.git"
documentation = "https://docs.rs/pexels"
readme = "./README.md"
keywords = ["pexels", "api", "client", "cli", "pexels-api"]
categories = ["web-programming", "development-tools", "asynchronous", "network-programming"]

[workspace.dependencies]
clap = { version = "4.6.4", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.33"
pexels-api = { path = "./pexels-api", version = "0.1.0" }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "charset", "http2", "system-proxy", "stream", "query", "form"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", default-features = false }
url = "2.5.8"
