[package]
name = "pexels-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pexels-api"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true


[dev-dependencies]
dotenvy.workspace = true
tokio = { workspace = true, features = ["full"] }

[lib]
name = "pexels_api"
path = "src/lib.rs"