[package]
name = "pexels-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pexels-cli"
keywords.workspace = true
categories.workspace = true

[dependencies]
pexels-api.workspace = true
clap = { version = "3.0", features = ["derive"] }
tokio.workspace = true
structopt.workspace = true
dotenv.workspace = true